fix: Fixed random z-index in .checkboxWrapper (CardModal)

--- a/client/src/components/CardModal/Tasks/Item.module.scss
+++ b/client/src/components/CardModal/Tasks/Item.module.scss
@@ -25,7 +25,6 @@
     top: 0;
     left: 0;
     vertical-align: top;
-    z-index: 2000;
     line-height: 1;
     height: 100%;
   }
